tests/parse_print/autogen/731~final/stderr.expected
Error:
    tests/parse_print/autogen/731~final/spec.essence:8:37:
  |
8 |                | l_2 : set (minSize var1) of
  |                                     ^^^^
Cannot use variable of category : decision in the context of Domain
